Tooltip wrapp fix
--HG--
branch : beta

--- a/rhodecode/public/css/style.css
+++ b/rhodecode/public/css/style.css
@@ -1962,11 +1962,12 @@ font:100% sans-serif;
 width:auto;
 opacity:1px;
 padding:8px;
-white-space: pre;
+white-space: pre-wrap;
 -webkit-border-radius: 8px 8px 8px 8px;
 -khtml-border-radius: 8px 8px 8px 8px; 
 -moz-border-radius: 8px 8px 8px 8px;
 border-radius: 8px 8px 8px 8px;
+
 }
 
 .ac {
